# internal/api/push_dto.go
@@ -1,0 +1,11 @@
+package api
+
+type PushSubscriptionRequest struct {
+	Endpoint string `json:"endpoint"`
+	Keys     PushSubscriptionKeys `json:"keys"`
+}
+
+type PushSubscriptionKeys struct {
+	P256DH string `json:"p256dh"`
+	Auth   string `json:"auth"`
+}
